# BattlecatAdWatcher

./: .gitignore  README.md  adbAPI.bash  getcoords  isBlack.py  main.bash
cimgdec/: CMakeLists.txt  main.cpp
imgdec/: getcoords.py  interactive.py  takeScreenshot.bash
